<resources>
    <string name="app_name">Tascs</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="email_address">email address</string>
    <string name="username">username</string>
    <string name="no_account_signup_now">No Account? SignUp Now</string>
    <string name="account_signup_now">Got an Account? SignIn Now</string>
    <string name="signup">SIGN UP</string>
    <string name="residence">residence</string>
    <string name="username2">lastname</string>
    <string name="username1">firstname</string>
</resources>